# hivemq-terraform-azure

./: .gitignore  README.md
hivemq-listener-node/: app.js
infra/: .terraform.lock.hcl  backend.tf  main.tf  providers.tf  variables.tf
infra/environments/: dev.tfvars
infra/environments/datainc/: dev.tfvars
infra/modules/container-apps-environment/: main.tf  variables.tf
infra/modules/container-registry/: variables.tf
infra/modules/key-vault/: main.tf  variables.tf
infra/modules/private-dns/: main.tf  variables.tf
infra/modules/vm-docker/: main.tf  variables.tf
my-listener/: README.md  main.py  pyproject.toml
terraform/: main.tf  variables.tf
terraform/environments/datainc/: dev.tfvars
terraform/modules/container-apps/: locals.tf  main.tf
terraform/modules/container-apps-environment/: outputs.tf
terraform/modules/container-registry/: main.tf  outputs.tf
terraform/modules/private-dns/: data.tf
terraform/modules/vm-docker/: output.tf
